fix: styling on channel name on video page - "a" tag no longer stretches across screen for clickable region

--- a/static/styles/video.css
+++ b/static/styles/video.css
@@ -125,7 +125,7 @@ main {
   color: #ffffff;
 }
 
-.details p {
+.details p,a {
   color: #ffffff;
   margin-bottom: 5px;
   font-size: 18px;
